data/diff_tests/wasmtime/br_IncorrectConditionEvaluation_729.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\9a\80\80\80\00\01\03\65\6e"
    "\76\12\65\78\74\65\72\6e\61\6c\5f\63\6f\6e\64\69"
    "\74\69\6f\6e\00\00\03\82\80\80\80\00\01\01\0a\94"
    "\80\80\80\00\01\8e\80\80\80\00\01\01\7f\03\40\20"
    "\00\10\00\71\0d\00\0b\0b"
  )
""
)